<resources>
    <string name="app_name">Splendy</string>
    <string name="title_activity_dashboard">Splendy Dashboard</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_title">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="sign_organization">Sign as an Organization</string>
    <string name="sign_as_organization">Sign as an Organization</string>
    <string name="organization_name">Name of Organization</string>
    <string name="email_organization">Organization Email</string>
    <string name="address">Address</string>
    <string name="friend_list">Friend List</string>
    <string name="make_public_event">Make Public Event</string>
    <string name="set_banner">Set Banner</string>
    <string name="contact_number">Contact Number</string>
    <string name="add">Add</string>
    <string name="make_your_event">Make Your Event</string>
    <string name="event_title">Event Title</string>
    <string name="discription">Discription</string>
    <string name="venue">Venue</string>
    <string name="date">Date</string>
    <string name="date_on_longpress">Date (Tap and hold to select the date)</string>
    <string name="time">Time</string>
    <string name="limitations">Limitations</string>
    <string name="invite">Invite</string>
    <string name="publish">Publish</string>
    <string name="todo">TODO</string>
    <string name="event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="massage">Massage</string>
    <string name="profile">Profile</string>
    <string name="my_events">My Events</string>
    <string name="log_out">Log Out</string>
    <string name="about_us">About Us</string>
    <string name="private_event">Private Event</string>
    <string name="public_event">Public Event</string>
    <string name="menu">Menu</string>
    <string name="dashboard">Dashboard</string>
    <string name="done">Done</string>
    <string name="public_events">Public Events</string>
    <string name="edit">Edit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_on_long_press">Time (Tap and hold to set time)</string>
    <string name="change_password">Change Your Password</string>
    <string name="change_settings">Edit Profile</string>
    <string name="edit_profile">Edit Profile Details</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="on">On</string>
    <string name="listed_events">Listed Events</string>
    <string name="private_events">Private Events</string>
    <string name="invitations">Invitations</string>
    <string name="listed_private_events">Listed Private Events</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="send_invitations">Send Invitations</string>
    <string name="joined">Joined</string>
    <string name="app_descripton">Splendy, The app which makes event publicity and event manage through the modern technology.</string>
    <string name="development">Developoed by SwiftTech Solutions.</string>
    <string name="version">Version : 1.0.0</string>
</resources>