<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dasboard"
            android:icon="@drawable/baseline_space_dashboard_24"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_my_events"
            android:icon="@drawable/baseline_grid_view_24"
            android:title="@string/my_events" />
        <item
            android:id="@+id/nav_friend_list"
            android:icon="@drawable/baseline_supervisor_account_24"
            android:title="@string/friend_list" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/log_out"
            android:title="@string/log_out" />
        <item
            android:id="@+id/about_us"
            android:title="@string/about_us" />
    </group>
</menu>