<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".views.PublicEventShowActivity" 
    android:layout_width="match_parent">

    <TextView
        android:id="@+id/public_event_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/event_name"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/public_event_banner_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/public_event_banner_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/public_event_name_view"
        tools:ignore="ContentDescription,ImageContrastCheck"
        tools:srcCompat="@drawable/preview1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/dashboardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/public_event_banner_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/public_event_description_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/description" />

            <TextView
                android:id="@+id/public_event_venue_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/venue" />

            <TextView
                android:id="@+id/public_event_date_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/date" />

            <TextView
                android:id="@+id/public_event_time_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/time" />

            <TextView
                android:id="@+id/public_event_limitation_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/limitations" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/dashboardButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/done"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>